<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">aRMOur</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="help_qualified">Help: %s</string>
    <string name="feedback">Feedback</string>
    <string name="totals">Totals</string>
    <string name="subtotals">Subtotals</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="logged">Logged</string>
    <string name="logged_start">Logged start</string>
    <string name="logged_end">Logged end</string>
    <string name="normal_day">Normal day</string>
    <string name="normal_days">Normal days</string>
    <string name="long_day">Long day</string>
    <plurals name="long_days">
        <item quantity="one">%d long day</item>
        <item quantity="other">%d long days</item>
    </plurals>
    <string name="night_shift">Night shift</string>
    <string name="night_shifts">Night shifts</string>
    <string name="custom_shift">Custom shift</string>
    <string name="custom_shifts">Custom shifts</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="selected_item">Selected item</string>
    <string name="items_deleted">%s deleted</string>
    <string name="undo">Undo</string>
    <string name="rostered_shift">Rostered shift</string>
    <plurals name="rostered_shifts">
        <item quantity="one">%d rostered shift</item>
        <item quantity="other">%d rostered shifts</item>
    </plurals>
    <string name="all_rostered_shifts">All rostered shifts</string>
    <string name="selected_rostered_shifts">Selected rostered shifts</string>
    <string name="run_review">Run review</string>
    <string name="run_review_period">Run review period</string>
    <string name="rostered_duration">Rostered duration</string>
    <string name="logged_duration">Logged duration</string>
    <string name="unrostered_duration">Difference (unrostered)</string>
    <string name="run_category">Run category</string>
    <string name="x_category">%c category</string>
    <string name="hours_per_week_over_period_format">%.1f hours per week (over %s)</string>
    <string name="range_hours_per_week_format">%d - %.1f hours per week</string>
    <string name="highest_category_hours_per_week_format">%d+ hours per week</string>
    <string name="insufficient_hours_per_week">Insufficient hours per week</string>
    <string name="additional_shift">Additional shift</string>
    <plurals name="additional_shifts">
        <item quantity="one">%d additional shift</item>
        <item quantity="other">%d additional shifts</item>
    </plurals>
    <string name="all_additional_shifts">All additional shifts</string>
    <string name="selected_additional_shifts">Selected additional shifts</string>
    <string name="cross_cover_shift">Cross cover shift</string>
    <plurals name="cross_cover_shifts">
        <item quantity="one">%d cross cover shift</item>
        <item quantity="other">%d cross cover shifts</item>
    </plurals>
    <string name="all_cross_cover_shifts">All cross cover shifts</string>
    <string name="selected_cross_cover_shifts">Selected cross cover shifts</string>
    <string name="expense">Expense</string>
    <plurals name="expenses">
        <item quantity="one">%d expense</item>
        <item quantity="other">%d expenses</item>
    </plurals>
    <string name="all_expenses">All expenses</string>
    <string name="selected_expenses">Selected expenses</string>
    <string name="new_shift">New shift</string>
    <string name="new_expense">New expense</string>
    <string name="percentage_format">%1$s (%2$d%%)</string>
    <string name="payment_format">$%.2f</string>
    <string name="logged_format">%1$s\nLogged: %2$s</string>
    <string name="hourly_rate">Hourly rate</string>
    <string name="default_hourly_rate">Default hourly rate</string>
    <string name="long_days_per_week">Long days per week</string>
    <string name="consecutive_days">Consecutive days</string>
    <string name="consecutive_weekends">Consecutive weekends</string>
    <string name="consecutive_nights">Consecutive nights</string>
    <string name="rostered_days_off">Rostered days off</string>
    <string name="recovery_following_nights">Recovery following nights</string>
    <string name="x_following_y">%1$s following %2$s</string>
    <string name="x_worked_in_last_y">%1$s worked in last %2$s</string>
    <string name="consecutive">%s (consecutive)</string>
    <string name="recovery_days_only_required_following_n_nights">Recovery days only required following %s</string>
    <string name="duration_in_hours_and_minutes">%1$s, %2$s</string>
    <string name="title">Title</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total payment</string>
    <string name="default_cross_cover_payment">Default cross cover total payment</string>
    <string name="currency_input_hint">Enter value ($)</string>
    <string name="compliant">Compliant</string>
    <string name="non_compliant">Non-compliant</string>
    <string name="unclaimed">Unclaimed</string>
    <string name="claimed">Claimed</string>
    <string name="paid">Paid</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="selected_but_ignored">%s selected but ignored (not logged)</string>
    <string name="not_applicable">Not applicable</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="time_zone">Time zone</string>
    <string name="duration_between_shifts">Duration between shifts</string>
    <string name="duration_over_day">Duration over day</string>
    <string name="duration_over_week">Duration over week</string>
    <string name="duration_over_fortnight">Duration over fortnight</string>
    <string name="rostered_day_off">Rostered day off</string>
    <string name="no_rostered_day_off_found">No rostered day off found</string>
    <string name="invalid_format">Invalid format</string>
    <string name="title_required">Title required</string>
    <string name="value_required">Value required</string>
    <string name="overlapping_shifts">Overlapping shifts</string>
    <string name="meca_maximum_consecutive_nights" tools:ignore="PluralsCandidate">No more than %d consecutive night duties comprising no longer than 10 hours shall be rostered</string>
    <string name="meca_maximum_hours_over_day" tools:ignore="PluralsCandidate">(13.1) RMOs shall not be required to work more than %d hours in any day.</string>
    <string name="meca_maximum_hours_over_week" tools:ignore="PluralsCandidate">(13.4.1) Where an employee is rostered on duty in excess of %d hours in any seven day period then a penalty total payment of $550 shall apply for that period.</string>
    <string name="meca_maximum_hours_over_fortnight" tools:ignore="PluralsCandidate">(13.4.1) Where an employee is required to work in excess of %d hours in a period of 14 consecutive days the employer shall pay a penalty of $1000 to the employee.</string>
    <string name="meca_minimum_hours_between_shifts" tools:ignore="PluralsCandidate">(13.4.6) A minimum break of %d consecutive hours off duty shall be provided between any two periods of normal rostered duty.</string>
    <string name="meca_minimum_recovery_after_consecutive_nights" tools:ignore="PluralsCandidate">(13.4.7) As a minimum provision, a minimum break comprising the balance of the calendar day upon which the employee ceased the last night duty plus a further %1$d calendar days must be provided immediately following a period of %2$d night duties or more.</string>
    <string name="meca_maximum_long_days_over_week" tools:ignore="PluralsCandidate">(13.4.8) Employees shall not be rostered on duty for more than %1$d long days in 7. For the purposes of this clause, a “long day” shall be hours worked in excess of %2$d hours.</string>
    <string name="meca_maximum_consecutive_days" tools:ignore="PluralsCandidate">(13.5.1) No Employee shall be on duty or on call more than %d consecutive days without a rostered rest period officially off duty of at least 48 hours before commencing the next period of duty.</string>
    <string name="meca_consecutive_weekends">(13.5.1) Employees shall have every second weekend completely free from duties.</string>
    <string name="meca_1_in_3_weekends">(Schedule One) No RMO can be rostered to work more than 1 weekend in 3</string>
    <string name="meca_safer_rosters_maximum_consecutive_days" tools:ignore="PluralsCandidate">No employee shall be required to work more than %d consecutive days.</string>
    <string name="meca_safer_rosters_minimum_recovery_after_more_consecutive_nights" tools:ignore="PluralsCandidate">Following %1$d or more consecutive rostered night duties, a minimum break comprising the balance of the calendar day upon which the employee ceased the last night duty plus a further %2$d calendar days must be provided.</string>
    <string name="meca_safer_rosters_minimum_recovery_after_fewer_consecutive_nights" tools:ignore="PluralsCandidate">Following %1$d consecutive rostered night duties, a minimum break comprising the balance of the calendar day upon which the employee ceased the last night duty plus at least a further %2$d calendar day must be provided.</string>
    <string name="meca_safer_rosters_maximum_consecutive_weekends" tools:ignore="PluralsCandidate">%1$d weekends can be rostered to work in a row but no more than once every %2$d weeks. The remaining %3$d weekends must be completely free from duties.</string>
    <string name="meca_safer_rosters_rostered_day_off_strict">For each weekend day worked, the RMO shall have a rostered weekday RDO in that fortnight. These weekday RDO(s) must be attached to a weekend RDO(s).</string>
    <string name="meca_safer_rosters_rostered_day_off_lenient">For each weekend day worked, the RMO shall have a rostered weekday RDO in that fortnight. Where attaching RDOs to a weekend RDO is not possible, 2 consecutive RDOs may fall during the week.</string>
    <string name="help_add_night_shift_label">Add a night shift</string>
    <string name="help_add_long_day_label">Add a long day</string>
    <string name="help_add_normal_day_label">Add a normal day</string>
    <string name="help_add_cross_cover_shift_label">Add a cross cover shift</string>
    <string name="help_add_expense_label">Add an expense</string>
    <string name="help_add_rostered_shift_description_1">New rostered shifts begin at least %s following the end of the previous shift</string>
    <string name="help_delete_shifts_title">Delete shifts</string>
    <string name="help_delete_delete_label">Choose <b>delete</b> from the menu</string>
    <string name="help_run_review_log_shifts_label">Log hours for each shift in the run review period</string>
    <string name="help_run_review_select_label">Press and hold to select shifts in the run review period</string>
    <string name="help_run_review_run_review_label">Choose <b>run review</b> from the menu</string>
    <string name="help_run_review_description_1">Run review will ignore shifts that are not logged</string>
    <string name="help_run_review_description_2">Run category will be calculated from the total logged duration over the run review period in weeks (rounded up)</string>
    <string name="help_select_shifts_label">Press and hold to select shifts</string>
    <string name="help_subtotals_title">Show subtotals for selected shifts</string>
    <string name="help_subtotals_subtotals_label">Choose <b>subtotals</b> from the menu</string>
    <string name="help_subtotals_description">Opens a summary view containing information for <b>selected</b> shifts, which can be filtered by payment status</string>
</resources>