<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        style="@style/help_title"
        android:text="@string/run_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/log_shifts"
        style="@style/help_icon"
        android:contentDescription="@string/logged"
        android:src="@drawable/ic_clipboard_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        style="@style/help_label"
        android:text="@string/help_run_review_log_shifts_label"
        app:layout_constraintBottom_toBottomOf="@id/log_shifts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/log_shifts"
        app:layout_constraintTop_toTopOf="@id/log_shifts" />

    <ImageView
        android:id="@+id/select"
        style="@style/help_icon"
        android:contentDescription="@string/selected_rostered_shifts"
        android:src="@drawable/ic_check_circle_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/log_shifts" />

    <TextView
        style="@style/help_label"
        android:text="@string/help_run_review_select_label"
        app:layout_constraintBottom_toBottomOf="@id/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select"
        app:layout_constraintTop_toTopOf="@id/select" />

    <ImageView
        android:id="@+id/run_review"
        style="@style/help_menu_icon"
        android:contentDescription="@string/run_review"
        android:src="@drawable/run_review_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select" />

    <TextView
        style="@style/help_label"
        android:text="@string/help_run_review_run_review_label"
        app:layout_constraintBottom_toBottomOf="@id/run_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/run_review"
        app:layout_constraintTop_toTopOf="@id/run_review" />

    <TextView
        android:id="@+id/help_description_1"
        style="@style/help_description"
        android:text="@string/help_run_review_description_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/run_review" />

    <TextView
        style="@style/help_description"
        android:text="@string/help_run_review_description_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_description_1" />

</android.support.constraint.ConstraintLayout>
