<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        style="@style/help_title"
        android:text="@string/help_subtotals_title"
        app:layout_constraintBottom_toTopOf="@+id/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/select"
        style="@style/help_icon"
        android:contentDescription="@string/selected_item"
        android:src="@drawable/ic_check_circle_24dp"
        app:layout_constraintBottom_toTopOf="@+id/totals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/select_label"
        style="@style/help_label"
        android:text="@string/help_select_shifts_label"
        app:layout_constraintBottom_toBottomOf="@id/select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/select"
        app:layout_constraintTop_toTopOf="@id/select" />

    <ImageView
        android:id="@+id/totals"
        style="@style/help_menu_icon"
        android:contentDescription="@string/subtotals"
        android:src="@drawable/ic_sigma_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/help_description_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select" />

    <TextView
        android:id="@+id/totals_label"
        style="@style/help_label"
        android:text="@string/help_subtotals_subtotals_label"
        app:layout_constraintBottom_toBottomOf="@id/totals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/totals"
        app:layout_constraintTop_toTopOf="@id/totals" />

    <TextView
        android:id="@+id/help_description_1"
        style="@style/help_description"
        android:text="@string/help_subtotals_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totals" />

</android.support.constraint.ConstraintLayout>
